<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ParkeerBeter</string>
    <string name="startup_busy">Bezig…</string>
    <string name="startup_login">Aan het inloggen…</string>
    <string name="login_needcredentials">Om in te loggen heb je een gebruikersnaam / wachtwoord nodig van smsparkeren.nl.</string>
    <string name="login_fail">Het inloggen is mislukt…</string>
    <string name="login_username">Gebruikersnaam</string>
    <string name="login_password">Wachtwoord</string>
    <string name="login_go">Inloggen</string>
    <string name="login_unexpected">Een onverwachte foutmelding is opgetreden. Probeer het later nog eens.</string>
    <string name="main_new">Nieuwe parkeeractie</string>
    <string name="main_current">Huidige parkeeracties</string>
    <string name="main_zonecode">Kaart…</string>
    <string name="main_vehicle">Kenteken</string>
    <string name="main_menu_logout">Uitloggen</string>
    <string name="main_start">Parkeren starten</string>
    <string name="listitem_stop">Stoppen</string>
    <string name="main_menu_reload">Verversen</string>
    <string name="main_stopping">Parkeeractie aan het stoppen…</string>
    <string name="main_starting">Parkeeractie aan het starten…</string>
    <string name="login_title">Inloggen</string>
    <string name="kies_zonecode">Kies zonecode</string>
    <string name="kies_kenteken">Kies kenteken</string>
    <string name="select_zone">Selecteer zone</string>
    <string name="kies">Kies zone</string>
    <string name="kaart_laden">Kaart aan het laden...</string>
</resources>